classDiagram
    class IShippingCostStrategy {
        +CalculateCost(weight: double, distance: double): double
    }

    class StandardShippingCost {
        +CalculateCost(weight: double, distance: double): double
    }

    class ExpressShippingCost {
        +CalculateCost(weight: double, distance: double): double
    }

    class OvernightShippingCost {
        +CalculateCost(weight: double, distance: double): double
    }

    class ShippingSystem {
        -shippingCostStrategy: IShippingCostStrategy
        +SetShippingCostStrategy(strategy: IShippingCostStrategy): void
        +CalculateShippingCost(weight: double, distance: double): double
    }

    IShippingCostStrategy <|-- StandardShippingCost
    IShippingCostStrategy <|-- ExpressShippingCost
    IShippingCostStrategy <|-- OvernightShippingCost
    ShippingSystem "1" *-- "1" IShippingCostStrategy : has
